# Summa

./: .editorconfig  .gitattributes  .gitignore  .project_metadata  AGENTS.md  Bug_Fixer.sh  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TRACKED_SURFACE.md  pyproject.toml  tests_support.py
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: audit-research.yml  bug.yml  codex-implementation.yml  config.yml  prompt-contract.yml  serviceability.yml
.github/workflows/: repo-hygiene.yml
config/: candidate_feedback_plan.schema.json  canonical-rebuildability-report.v1.schema.json  canonical-write-spool-record.v1.schema.json  canonical_graph_model_outline.json  canonical_graph_model_outline.schema.json  correction_ledger.schema.json  crown_jewel_backup_manifest.schema.json  crown_jewel_store_manifest.schema.json  crown_jewel_store_policy.schema.json  evidence_locator.schema.json  field_review_state.schema.json  gather_candidate_batch.schema.json  knowledge_tree_build_manifest.schema.json  leak_scan_allowlist.schema.json  llm_source_text_wrapper_template.json  llm_source_text_wrapper_template.schema.json  local_search_projection.schema.json  local_search_results.schema.json  migration_ledger.schema.json  network_safety_gate_request.schema.json  public_knowledge_tree_presentation.schema.json  public_safekeeping_manifest.schema.json  redacted-diagnostic-manifest.v1.schema.json  release_readiness_report.schema.json  repository_capabilities.v1.json  repository_capabilities.v1.schema.json  runtime_ledger.schema.json  scheduler_failure_state_reconciliation.schema.json  source_adapter.schema.json  source_adapter_handoff.schema.json  source_locus.schema.json  source_query_execution_simulation.schema.json  source_query_plan.schema.json  static_page_family_query_contract.json  static_page_family_query_contract.schema.json  subject_manifest.schema.json  topic_index_lifecycle.schema.json  topic_saturation_policy.v1.json  topic_saturation_policy.v1.schema.json  topic_workspace_registry.schema.json
config/domain_packs/: domain_pack.schema.json  general.v1.json  organism.v1.json
config/durability_policies/: local_first_crown_jewels.v1.json
config/standards_profiles/: dcmi.v1.json  nara_preservation_readiness.v1.json  premis.v1.json  rico.v1.json  standards_profile.schema.json
config/view_models/: job-status.v1.schema.json  review-queue.v1.schema.json  source-intake-status.v1.schema.json  subject-detail.v1.schema.json  workspace-overview.v1.schema.json
docs/: README.md  repo-layout.md
docs/history/: sqlite-tooling-history.md
docs/operations/: logging.md
docs/project/: CANONICAL_GRAPH_MODEL.md  CYCLE_EVIDENCE_LEDGER.md  DOMAIN_PACKS.md  GRAPH_CLOSURE_AUDIT.md  LEAK_SCANNER.md  LLM_SOURCE_TEXT_WRAPPER.md  NETWORK_SAFETY_GATE.md  PROMPT_AUDIT.md  PUBLIC_KNOWLEDGE_TREE_PRESENTATION_CONTRACT.md  PUBLIC_PRIVATE_EXPORT_BOUNDARY.md  PUBLIC_SAFEKEEPING_MANIFEST.md  REPOSITORY_CAPABILITIES.md  SELECTION_EXPLANATION_CONTRACT.md  STANDARDS_PROFILES.md  STATIC_PAGE_FAMILY_QUERY_CONTRACT.md  STORAGE_AND_PUBLICATION_POLICY.md
docs/scripts/: index_apply_review_decision.md  index_audit_rebuildability.md  index_build_knowledge_tree.md  index_build_release_readiness_bundle.md  index_evaluate_topic_saturation.md  index_execute_source_adapter.md  index_export_redacted_diagnostics.md  index_export_standards_profile.md  index_new_topic.md  index_replay_canonical_write_spool.md  index_run_gather.md  index_run_scheduled_topic_cycles.md  index_run_topic_cycle.md
tests/: conftest.py  publication_fixture_store.py  test_apply_review_decision.py  test_atomic_write_json_canonicalization.py  test_atomic_write_json_strict.py  test_authority_reconciliation.py  test_bootstrap_topic_workspace.py  test_bug_fixer_surface_removed.py  test_candidate_feedback_plan.py  test_candidate_feedback_selection.py  test_canonical_dedup_and_contradiction.py  test_canonical_graph_closure.py  test_canonical_graph_model_outline.py  test_canonical_graph_model_outline_validator.py  test_canonical_ingest_candidate_batch.py  test_canonical_ingest_execution_artifacts.py  test_canonical_store_bootstrap.py  test_canonical_store_population_summary.py  test_canonical_store_write_api.py  test_canonical_write_spool.py  test_changelog_build_metadata.py  test_confidence_model.py  test_config_schema_integrity.py  test_correction_ledger_validator.py  test_crown_jewel_backup_contracts.py  test_cycle_evidence_ledger.py  test_domain_pack_index.py  test_domain_pack_runtime_contracts.py  test_evidence_locator_validator.py  test_execute_source_adapter_decoding.py  test_execute_source_adapter_dispatch.py  test_execute_source_adapter_local.py  test_execute_source_adapter_local_variants.py  test_execute_source_adapter_remote.py  test_export_standards_profile.py  test_external_command_failures.py  test_field_review_state_validator.py  test_fixture_immutability.py  test_gather_iteration.py  test_general_pack_place_shape.py  (+85 more)
tools/collateral/: pdf_extract.py  requirements.txt
tools/common/: atomic_write.py  authority_ladder.py  candidate_feedback_contract.py  canonical_graph_model_contract.py  correction_ledger_contract.py  crown_jewel_backup.py  crown_jewel_store_manifest.py  evidence_locator_contract.py  field_review_state_contract.py  leak_scanner.py  llm_source_text_wrapper.py  local_search_contract.py  migration_ledger.py  network_safety_gate.py  operator_text.py  publication_builder.py  runtime_ledger.py  runtime_logging.py  scheduler_failure_reconciliation.py  scheduler_failure_reconciliation_contract.py  search_leak_policy.py  selection_explanation.py  source_adapter_contract.py  source_adapter_handoff.py  source_text_profile.py  standards_profiles.py  static_page_family_query_contract.py  subprocess_capture.py  topic_saturation.py  topic_workspace_registry.py  workspace_lock.py
tools/pipeline_registry/: build_pipeline_registry.py  schema.sql
tools/scripts/: Git_Push_Changed.sh  Index-Backup.sh  Index_Apply_Review_Decision.sh  Index_Audit_Rebuildability.sh  Index_Build_Knowledge_Tree.sh  Index_New_Topic.sh  (+60 more)
(+282 files in other folders)
