[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "summa-indexer"
version = "8.8.0.5"
description = "Local-first topic indexing, bibliography, source-lead, and public-safe publication tooling."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Summa contributors" }
]
dependencies = []

[project.scripts]
summa-new-topic = "tools.scripts.bootstrap_topic_workspace:main"
summa-build-knowledge-tree = "tools.scripts.build_publication_artifacts:main"
summa-workspace-overview = "tools.scripts.build_workspace_overview_view:main"
summa-subject-detail = "tools.scripts.build_subject_detail_view:main"
summa-source-intake-status = "tools.scripts.build_source_intake_status_view:main"
summa-review-queue = "tools.scripts.build_review_queue_view:main"
summa-local-doctor = "tools.scripts.local_doctor:main"
summa-operator-dashboard = "tools.scripts.build_operator_dashboard:main"
summa-operator-path-smoke = "tools.scripts.operator_path_smoke:main"
summa-resolve-gather-domain-pack = "tools.scripts.resolve_gather_domain_pack:main"
summa-init-canonical-store = "tools.source_db_tools.init_canonical_store:main"
summa-run-gather = "tools.scripts.run_topic_gather:main"
summa-execute-source-adapter = "tools.scripts.execute_source_adapter:main"
summa-ingest-gather-candidate-batch = "tools.scripts.ingest_gather_candidate_batch:main"
summa-ingest-execution-artifacts = "tools.scripts.ingest_execution_artifacts:main"
summa-run-topic-cycle = "tools.scripts.run_topic_cycle:main"
summa-run-scheduled-topic-cycles = "tools.scripts.run_scheduled_topic_cycles:main"
summa-select-scheduled-workspaces = "tools.scripts.select_scheduled_workspaces:main"
summa-apply-review-decision = "tools.scripts.apply_review_decision:main"
summa-evaluate-network-safety-gate = "tools.scripts.evaluate_network_safety_gate:main"
summa-replay-canonical-write-spool = "tools.scripts.replay_canonical_write_spool:main"
summa-audit-canonical-graph-closure = "tools.scripts.audit_canonical_graph_closure:main"
summa-export-redacted-diagnostics = "tools.scripts.export_redacted_diagnostics:main"
summa-audit-rebuildability = "tools.scripts.audit_rebuildability:main"

[dependency-groups]
test = [
  "jsonschema>=4.23",
  "pytest>=8",
  "pytest-cov>=5",
]
dev = [
  "jsonschema>=4.23",
  "mypy>=1.13",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --timeout=300"
markers = [
  "unit: a fast, in-process test",
  "integration: a higher-cost integration-style test",
  "slow: a longer-running test",
  "network_fixture: tests that exercise network-like fixtures",
  "subprocess: tests that spawn external processes",
  "sqlite: tests that exercise sqlite-backed persistence",
  "git: tests that invoke git commands",
  "publication: tests focused on operator publication workflows",
]
pythonpath = [
  ".",
  "tools/source_db_tools/tests"
]
testpaths = [
  "tests",
  "tools/source_db_tools/tests"
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
exclude = ["tools.source_db_tools.tests*"]
namespaces = true

[tool.coverage.run]
source = ["tools"]
relative_files = true
omit = [
  "tests/*",
  "tests/fixtures/*",
  "tools/source_db_tools/tests/*",
  "build/*",
  "dist/*",
  "runtime/*",
  "dbs/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "build",
  "dbs",
  "dist",
  "runtime",
  "tests/fixtures",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
follow_imports = "silent"
# Typed gate for the current runtime spine. New live operator/runtime modules
# should be added here or explicitly justified in tests before they can drift out
# of static validation.
files = [
  "tools/common/search_leak_policy.py",
  "tools/common/atomic_write.py",
  "tools/common/publication_builder.py",
  "tools/common/runtime_ledger.py",
  "tools/common/runtime_logging.py",
  "tools/common/workspace_lock.py",
  "tools/common/standards_profiles.py",
  "tools/collateral/pdf_extract.py",
  "tools/scripts/apply_review_decision.py",
  "tools/scripts/bootstrap_topic_workspace.py",
  "tools/scripts/audit_canonical_graph_closure.py",
  "tools/scripts/audit_rebuildability.py",
  "tools/scripts/build_candidate_feedback_plan.py",
  "tools/scripts/build_local_search_projection.py",
  "tools/scripts/build_publication_artifacts.py",
  "tools/scripts/build_static_knowledge_tree.py",
  "tools/scripts/build_release_readiness_bundle.py",
  "tools/scripts/evaluate_network_safety_gate.py",
  "tools/scripts/execute_source_adapter.py",
  "tools/scripts/export_standards_profile.py",
  "tools/scripts/export_redacted_diagnostics.py",
  "tools/scripts/ingest_execution_artifacts.py",
  "tools/scripts/ingest_gather_candidate_batch.py",
  "tools/scripts/local_doctor.py",
  "tools/scripts/operator_path_smoke.py",
  "tools/scripts/query_local_search.py",
  "tools/scripts/replay_canonical_write_spool.py",
  "tools/scripts/topic_backup_drill.py",
  "tools/scripts/run_scheduled_topic_cycles.py",
  "tools/scripts/run_topic_cycle.py",
  "tools/scripts/run_topic_gather.py",
  "tools/scripts/select_scheduled_workspaces.py",
  "tools/source_db_tools/authority_reconciliation.py",
  "tools/source_db_tools/confidence_model.py",
  "tools/source_db_tools/cycle_evidence_ledger.py",
  "tools/source_db_tools/canonical_ingest.py",
  "tools/source_db_tools/canonical_graph_closure.py",
  "tools/source_db_tools/canonical_reconciliation.py",
  "tools/source_db_tools/canonical_store.py",
  "tools/source_db_tools/canonical_write_spool.py",
  "tools/source_db_tools/identifier_normalization.py",
  "tools/source_db_tools/init_canonical_store.py",
  "tools/source_db_tools/loop_health.py",
  "tools/source_db_tools/provenance_events.py",
  "tools/source_db_tools/review_decision_apply.py",
  "tools/source_db_tools/review_queue.py",
  "tools/source_db_tools/schema_profile_validation.py",
  "tools/source_db_tools/source_query_plan.py",
  "tools/source_db_tools/sqlite_safety.py",
  "tests/test_llm_runner_status.py",
  "tests/test_mypy_runtime_gate.py",
  "tests/test_packaging_metadata.py",
]
